fdo#78420  File is getting corrupted after exported from LO.

It is not creating .rels file for Header3.xml. While the Header3.xml contains the images.

Change-Id: I3d1eb187eaf23fc05783fbfd3576d9a585de791f
Reviewed-on: https://gerrit.libreoffice.org/9286
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>